--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "siguache",
-  "version": "1.0.0",
+  "name": "SIGuache",
+  "version": "0.0.0",
   "private": true,
   "description": "siguache",
-  "author": "Moacir P. de Sá Pereira",
+  "author": "Moacir P. de Sá Pereira <github@moacir.moacir.com>",
+  "repository": "https://github.com/SIGuache/siguache.org.git",
   "keywords": [
     "gatsby"
   ],
